--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 psycopg2-binary = "*"
 django-cors-headers = "*"
 djangorestframework = "*"
+django-redis = "*"
+redis = "*"
 
 [dev-packages]
 
