--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   db:
@@ -34,20 +32,21 @@ services:
   # Django Backend
   backend:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn standapp.wsgi:application --bind 0.0.0.0:8000 --workers 3
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
+      - ./staticfiles:/app/staticfiles
+    expose:
+      - "8000"
     environment:
-      - DEBUG=1
+      - DEBUG=0
       - DB_NAME=standapp_db
       - DB_USER=standapp_user
       - DB_PASSWORD=standapp_password
       - DB_HOST=db
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0
-      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,backend
+      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,backend,nginx
     depends_on:
       db:
         condition: service_healthy
@@ -60,14 +59,24 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=http://localhost/api
     depends_on:
       - backend
-    stdin_open: true
-    tty: true
+
+  # Nginx Proxy Server
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./staticfiles:/app/staticfiles:ro
+    depends_on:
+      - backend
+      - frontend
 
 volumes:
   postgres_data:
