chore: resolved loading of frontend via nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,15 @@ server {
     listen 80;
     server_name localhost;
 
-    # Serve static files directly
-    location /static/ {
-        alias /app/staticfiles/;
+    # Serve Django static files directly
+    location /static/admin/ {
+        alias /app/staticfiles/admin/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+
+    location /static/rest_framework/ {
+        alias /app/staticfiles/rest_framework/;
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
@@ -40,7 +46,7 @@ server {
         proxy_redirect off;
     }
 
-    # Serve React frontend for all other requests
+    # Serve React frontend for all other requests (including React's static files)
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
