--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       POSTGRES_PASSWORD: standapp_password
     ports:
       - "5432:5432"
+    networks:
+      - backend-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U standapp_user -d standapp_db"]
       interval: 10s
@@ -23,6 +25,8 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - backend-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -38,6 +42,9 @@ services:
       - ./staticfiles:/app/staticfiles
     expose:
       - "8000"
+    networks:
+      - backend-network
+      - frontend-network
     environment:
       - DEBUG=1
       - DB_NAME=standapp_db
@@ -54,30 +61,43 @@ services:
         condition: service_healthy
 
   # React Frontend
-  frontend:
-    build: ./frontend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    expose:
-      - "3000"
-    environment:
-      - REACT_APP_API_URL=http://localhost/api
-    depends_on:
-      - backend
+  # frontend:
+  #   build: ./frontend
+  #   volumes:
+  #     - ./frontend:/app
+  #     - /app/node_modules
+  #   expose:
+  #     - "3000"
+  #   networks:
+  #     - frontend-network
+  #   environment:
+  #     - REACT_APP_API_URL=http://localhost/api
+  #   depends_on:
+  #     - backend
 
   # Nginx Proxy Server
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./staticfiles:/app/staticfiles:ro
+    networks:
+      - frontend-network
+      - backend-network
     depends_on:
       - backend
-      - frontend
+      # - frontend
 
 volumes:
   postgres_data:
   redis_data:
+
+networks:
+  backend-network:
+    driver: bridge
+    name: standapp-backend
+  frontend-network:
+    driver: bridge
+    name: standapp-frontend
