--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,6 +19,12 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    location /static/drf_spectacular_sidecar/ {
+        alias /app/staticfiles/drf_spectacular_sidecar/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+
     # Serve media files directly (if you add media files later)
     location /media/ {
         alias /app/media/;
@@ -47,18 +53,28 @@ server {
     }
 
     # Serve React frontend for all other requests (including React's static files)
+    # location / {
+    #     proxy_pass http://frontend:3000;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_redirect off;
+        
+    #     # WebSocket support for React dev server
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "upgrade";
+    # }
+
+    # Default location - serve Django backend for root requests (since frontend is disabled)
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
-        
-        # WebSocket support for React dev server
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
 
     # Security headers
